--- a/setkaCss.css
+++ b/setkaCss.css
@@ -63,7 +63,7 @@ button {
     position: absolute;
     font-weight: bold;
     text-align: center;
-    background-color: aquamarine;
+    background-color: #1a237e;
     border: 2px solid black;
     padding: 70px;
     top: 50%;
