--- a/setkaCss.css
+++ b/setkaCss.css
@@ -6,8 +6,10 @@
 @font-face { font-family: 'Oswald-Bold700'; src: url('/czcionka/static/Oswald-Bold.ttf') format('truetype'); font-display: fallback;}
 :root{
     --font-family-Oswald-200: 'Oswald-ExtraLight200';
+    --font-family-Oswald-300: 'Oswald-Light300';
     --font-family-Oswald-400: 'Oswald-Regular400';
     --font-family-Oswald-500: 'Oswald-Medium500';
+    --font-family-Oswald-600: 'Oswald-SemiBold600';
     --font-family-Oswald-700: 'Oswald-Bold700';
     --font-size-site: 18px;
     --font-size: clamp(1.2rem, 0.4vw, 2.2rem);
@@ -29,29 +31,37 @@ html {
     font-size: var(--font-size-site);
 }
 body {
-    font-family: var(--font-family-Oswald-200);
+    font-family: var(--font-family-Oswald-300);
     font-size: var(--font-size);
     background-color: #1b1b1b;
     color: #e2e2e2;
 }
 button {
     font-size: calc(0.3em + 1vw);
-    font-weight: bold;
+    font-family: var(--font-family-Oswald-700);
 }
-.header {
-    text-align: center;
+#topBar {
+    display: flex;
     background-color: #1a237e;
+}
+.headerName {
+    font-size: var(--font-size-h2);
+    width: 90%;
+}
+#logInButton {
+    justify-self: end;
+    padding: 1em;
 }
 #timer {
     display: none;
     text-align: center;
 }
 .startButton{
-    margin-left: 20px;
-    padding: 5px;
+    padding: 1em;
 }
 #startButtons {
-    text-align: center;
+    display: flex;
+    justify-content: space-around;
 }
 #liczby {
     display: none;
