--- a/setkaCss.css
+++ b/setkaCss.css
@@ -1,9 +1,9 @@
-@font-face { font-family: 'Oswald-ExtraLight200'; src: url('/czcionka/static/Oswald-ExtraLight.ttf') format('truetype'); font-display: fallback;}
-@font-face { font-family: 'Oswald-Light300'; src: url('/czcionka/static/Oswald-Light.ttf') format('truetype'); font-display: fallback;}
-@font-face { font-family: 'Oswald-Regular400'; src: url('/czcionka/static/Oswald-Regular.ttf') format('truetype'); font-display: fallback;}
-@font-face { font-family: 'Oswald-Medium500'; src: url('/czcionka/static/Oswald-Medium.ttf') format('truetype'); font-display: fallback;}
-@font-face { font-family: 'Oswald-SemiBold600'; src: url('/czcionka/static/Oswald-SemiBold.ttf') format('truetype'); font-display: fallback;}
-@font-face { font-family: 'Oswald-Bold700'; src: url('/czcionka/static/Oswald-Bold.ttf') format('truetype'); font-display: fallback;}
+@font-face { font-family: 'Oswald-ExtraLight200'; src: url(/czcionka/static/Oswald-ExtraLight.ttf) format('truetype'); font-display: fallback;}
+@font-face { font-family: 'Oswald-Light300'; src: url(/czcionka/static/Oswald-Light.ttf) format('truetype'); font-display: fallback;}
+@font-face { font-family: 'Oswald-Regular400'; src: url(/czcionka/static/Oswald-Regular.ttf) format('truetype'); font-display: fallback;}
+@font-face { font-family: 'Oswald-Medium500'; src: url(/czcionka/static/Oswald-Medium.ttf) format('truetype'); font-display: fallback;}
+@font-face { font-family: 'Oswald-SemiBold600'; src: url(/czcionka/static/Oswald-SemiBold.ttf) format('truetype'); font-display: fallback;}
+@font-face { font-family: 'Oswald-Bold700'; src: url(/czcionka/static/Oswald-Bold.ttf) format('truetype'); font-display: fallback;}
 :root{
     --font-family-Oswald-200: 'Oswald-ExtraLight200';
     --font-family-Oswald-300: 'Oswald-Light300';
@@ -40,18 +40,28 @@ button {
     font-size: calc(0.3em + 1vw);
     font-family: var(--font-family-Oswald-700);
 }
+
 #topBar {
     display: flex;
+    justify-content: space-evenly;
     background-color: #1a237e;
 }
-.headerName {
+#headerName {
     font-size: var(--font-size-h2);
-    width: 90%;
+    text-align: center;
+    flex-grow: 1;
+}
+#logInDiv {
+    display: flex;
+}
+#logInIcon {
+    width: 100px;
 }
 #logInButton {
-    justify-self: end;
-    padding: 1em;
+    padding: 0px;
+    margin: 0px;
 }
+
 #timer {
     display: none;
     text-align: center;
