lepsze wyświetlanie wyniku

--- a/setkaCss.css
+++ b/setkaCss.css
@@ -107,15 +107,14 @@ button {
 }
 #wynik {
     display: none;
-    position: absolute;
+    position: sticky;
     font-weight: bold;
     text-align: center;
     background-color: #1a237e;
     border: 2px solid black;
-    padding: 70px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: calc(2rem + 2vw);
+    top: calc(2rem + 2vw);
+    left: calc(2rem + 2vw);
 }
 .klikniety {
     background-color: gray;
