--- a/setkaCss.css
+++ b/setkaCss.css
@@ -40,7 +40,7 @@ button {
     font-size: calc(0.3em + 1vw);
     font-family: var(--font-family-Oswald-700);
 }
-table {
+td, th {
     border: 1px solid white;
 }
 
