--- a/setkaCss.css
+++ b/setkaCss.css
@@ -137,6 +137,8 @@ td, th {
 
 /* leaderboard */
 #leaderboard {
+    background-color: #1a237e;
+    border: 2px solid black;
     display: none;
     justify-items: center;
 }
