--- a/setkaCss.css
+++ b/setkaCss.css
@@ -1,16 +1,11 @@
-@font-face { font-family: 'Oswald-ExtraLight200'; src: url(/czcionka/static/Oswald-ExtraLight.ttf) format('truetype'); font-display: fallback;}
-@font-face { font-family: 'Oswald-Light300'; src: url(/czcionka/static/Oswald-Light.ttf) format('truetype'); font-display: fallback;}
-@font-face { font-family: 'Oswald-Regular400'; src: url(/czcionka/static/Oswald-Regular.ttf) format('truetype'); font-display: fallback;}
-@font-face { font-family: 'Oswald-Medium500'; src: url(/czcionka/static/Oswald-Medium.ttf) format('truetype'); font-display: fallback;}
-@font-face { font-family: 'Oswald-SemiBold600'; src: url(/czcionka/static/Oswald-SemiBold.ttf) format('truetype'); font-display: fallback;}
-@font-face { font-family: 'Oswald-Bold700'; src: url(/czcionka/static/Oswald-Bold.ttf) format('truetype'); font-display: fallback;}
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 :root{
-    --font-family-Oswald-200: 'Oswald-ExtraLight200';
-    --font-family-Oswald-300: 'Oswald-Light300';
-    --font-family-Oswald-400: 'Oswald-Regular400';
-    --font-family-Oswald-500: 'Oswald-Medium500';
-    --font-family-Oswald-600: 'Oswald-SemiBold600';
-    --font-family-Oswald-700: 'Oswald-Bold700';
+    --font-family-Oswald-200: 'Oswald', sans-serif;
+    --font-family-Oswald-300: 'Oswald', sans-serif;
+    --font-family-Oswald-400: 'Oswald', sans-serif;
+    --font-family-Oswald-500: 'Oswald', sans-serif;
+    --font-family-Oswald-600: 'Oswald', sans-serif;
+    --font-family-Oswald-700: 'Oswald', sans-serif;
     --font-size-site: 18px;
     --font-size: clamp(1.2rem, 0.4vw, 2.2rem);
     --font-size-h6: clamp(1.21rem, 0.65vw, 1rem);
